--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -11,9 +11,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/buildTextView"
         android:paddingBottom="15dp"
         android:paddingTop="15dp"
         android:layout_gravity="center"
+        android:textStyle="bold"
+        android:textSize="30dp"
         android:text="Select a building!!"
 
         />
@@ -36,5 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
+        android:textSize="20dp"
         android:text="TextView" />
 </LinearLayout>
