--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -24,7 +24,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:src="@drawable/cis" />
 
     <TextView
@@ -32,6 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textSize="12dp"
+        android:textStyle="italic"
         android:text="TextView" />
 
     <TextView
@@ -40,5 +42,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:textSize="20dp"
+        android:textAlignment="center"
         android:text="TextView" />
 </LinearLayout>
