--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/beach"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select a building!!"
+        android:layout_marginTop="5dp"
+        android:text="Select a building"
         android:layout_gravity="center"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="45dp"
         android:paddingBottom="15dp"
         android:paddingTop="15dp"
          />
 
     <Spinner
         android:id="@+id/buildings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
+        android:popupBackground="@color/white"
+        android:layout_marginTop="75dp"
+        android:layout_marginBottom="15dp"
+        android:background="@color/white"
+
         android:entries="@array/buildings"
         />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@drawable/rounded_button"
         android:text="Search"
         android:onClick="searchBuilding"/>
 
