--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,26 @@
     android:background="@drawable/beach"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="135dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="50dp"
+        android:src="@drawable/uncw_emblem"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Select a building"
+        android:text="Select a Building"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:textSize="45sp"
-        android:paddingBottom="15dp"
-        android:paddingTop="15dp"
+        android:textSize="25sp"
+        android:paddingTop="0dp"
+        android:paddingBottom="20dp"
          />
 
     <Spinner
@@ -28,10 +37,8 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:popupBackground="@color/white"
-        android:layout_marginTop="75dp"
         android:layout_marginBottom="15dp"
         android:background="@color/white"
-
         android:entries="@array/buildings"
         />
 
