Updated with constraint layout and building java class

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,7 +16,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/buildTextView"
+                android:id="@+id/building_name"
                 android:paddingBottom="15dp"
                 android:paddingTop="15dp"
                 android:layout_gravity="center"
