--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
         android:layout_gravity="center"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif"
         android:paddingBottom="20dp"
         android:paddingTop="0dp"
@@ -49,20 +49,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView2" />
 
-    <Spinner
-        android:id="@+id/buildings"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
-        android:layout_gravity="center"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/fragment_view"
+        android:name="edu.uncw.seahawktours.BuildingListSpinnerFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/white"
-        android:entries="@array/buildings"
-        android:popupBackground="@color/white"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
