--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="gray">#376d3a</color>
+    <color name="blue">#023587</color>
+    <color name="black">#000000</color>
 
 
 </resources>
