--- a/app/src/main/res/layout/fragment_building_list_spinner.xml
+++ b/app/src/main/res/layout/fragment_building_list_spinner.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Spinner
+<android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/buildings"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
-        android:layout_gravity="center"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/white"
-        android:entries="@array/buildings"
+        android:id="@+id/recylcer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:popupBackground="@color/white"
+        android:scrollbars="vertical"
          />
 
