--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -65,7 +65,7 @@
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/fragment_view"
-            android:name="edu.uncw.seahawktours.BuildingListSpinnerFragment"
+            android:name="edu.uncw.seahawktours.BuildingListFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
