--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fragment_view"
-        android:name="edu.uncw.seahawktours.BuildingListSpinnerFragment"
+        android:name="edu.uncw.seahawktours.BuildingListFragment"
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_marginEnd="8dp"
