--- a/app/src/main/res/layout/fragment_building_detail.xml
+++ b/app/src/main/res/layout/fragment_building_detail.xml
@@ -74,6 +74,7 @@
             android:text="@string/brooks_name"
             android:textSize="30sp"
             android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
