--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,64 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coordinator"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frag_constraint"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="225dp"
-        android:layout_width="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/seahawk"
-                app:layout_collapseMode="parallax"/>
-            <include
-                android:id="@+id/toolbar"
-                layout="@layout/toobar_main"
-                 />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior='@string/appbar_scrolling_view_behavior'>
-
-            <LinearLayout
-                android:id="@+id/detail_constraint"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                 >
-
-                <fragment
-                    android:id="@+id/detail_fragment"
-                    android:name="edu.uncw.seahawktours.BuildingDetailFragment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-
-                     />
+    android:orientation="vertical"
+   >
 
 
-            </LinearLayout>
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toobar_main"
+         />
 
-        </android.support.v4.widget.NestedScrollView>
+    <fragment
+        android:id="@+id/detail_fragment"
+        android:name="edu.uncw.seahawktours.BuildingDetailFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+         />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
+
+
+
+
+
+
+
 
