--- a/app/src/main/res/layout/card_captioned_image.xml
+++ b/app/src/main/res/layout/card_captioned_image.xml
@@ -5,8 +5,10 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    card_view:cardElevation="2dp"
-    card_view:cardCornerRadius="4dp">
+    android:layout_marginBottom="15dp"
+    card_view:cardElevation="25dp"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardPreventCornerOverlap="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,6 +21,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             />
 
         <TextView
